# gerenciador_de_salas

./: .gitignore  README.md  package-lock.json  package.json
backend/: .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
backend/.github/workflows/: tests.yml
backend/deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
backend/docs/modelagem_banco/: dbdiagram.md
backend/docs/postman_api/: Trabalho Final - ProgWEB.postman_collection.json
backend/localiza_sala_backend/: __init__.py  __main__.py  conftest.py  settings.py
backend/localiza_sala_backend/db/: base.py  utils.py
backend/localiza_sala_backend/db/dao/: courses_dao.py  dummy_dao.py  events_dao.py  reservation_dao.py  rooms_dao.py  teachers_dao.py  users_dao.py
backend/localiza_sala_backend/db/migrations/: env.py
backend/localiza_sala_backend/db/migrations/versions/: 2022-10-29-16-39_149982ee1407.py  2022-10-30-20-51_ced1cda95140.py  2022-10-30-20-56_6e0891c52916.py  2022-11-02-17-52_a0f79b0922b2.py  2022-11-05-04-01_f2a086bf6b7a.py  2022-11-05-20-34_8c2f6e741bd2.py  2022-11-06-21-31_ee12ec175a4e.py  2022-11-06-22-27_65261894aec8.py  2022-11-13-20-16_2e9b1728b695.py  2022-11-13-20-47_f710d00faa01.py  2022-11-13-20-57_0d29be7df926.py  2022-11-15-16-50_f62eeac22024.py  2022-11-15-18-34_9fe0cd75d4d9.py  2022-11-15-18-42_afa3234e85f9.py  2022-11-15-18-56_ac009c492603.py
backend/localiza_sala_backend/db/models/: __init__.py  courses_model.py  dummy_model.py  events_model.py  reservations.py  reservations_model.py  rooms_model.py  teachers_model.py  users_model.py
backend/localiza_sala_backend/services/: __init__.py  auth.py
backend/localiza_sala_backend/tests/: __init__.py  test_dummy.py
backend/localiza_sala_backend/web/: __init__.py  application.py  lifetime.py
backend/localiza_sala_backend/web/api/: __init__.py  router.py
deploy/: docker-compose.yml
(+67 files in other folders)
